# AoC2022

./: .gitignore  README.md  dup
day01/: Main.hs  day01.cabal
day02/: Main.hs  day02.cabal
day03/: Main.hs  day03.cabal
day04/: Main.hs  day04.cabal
day05/: Main.hs  day05.cabal
day06/: Main.hs  day06.cabal
day08/: Main.hs  day08.cabal
day09/: Main.hs  day09.cabal
day10/: Main.hs  day10.cabal
day12/: Main.hs  day12.cabal  tmp.txt
