cabal-version:       >=1.10

name:                day08
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Hugo Mills
maintainer:          hugo@carfax.org.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable day08
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
     base >=4.13 && <4.14,
     ilist >= 0.4.0.1
  -- hs-source-dirs:
  default-language:    Haskell2010
