cabal-version:       >=1.10

name:                day09
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Hugo Mills
maintainer:          hugo@carfax.org.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable day09
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
     base >=4.13 && <4.14,
     containers >= 0.6.2,
     extra >= 1.7.12
  -- hs-source-dirs:
  default-language:    Haskell2010
